--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root {
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
+    --branco-principal: #ffffff;
+    --cinza-secundario: #ffffff;
+    --botao-azul: #166b1d;
+    --cor-de-fundo: #294d20;
     --fonte-principal: 'Inter';
 }
 
@@ -20,7 +20,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/Background.png");
+    background-image: url("aaaaa.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
